tests/ui/parser/issues/issue-68890-2.rs
fn main() {}

type X<'a> = (?'a) +;
//~^ ERROR `?` may only modify trait bounds, not lifetime bounds
//~| ERROR at least one trait is required for an object type
